--- a/00ExperimentalAr.Rmd
+++ b/00ExperimentalAr.Rmd
@@ -731,7 +731,7 @@ formula <- bf(
     (1 + persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID)
-  #, autocor = autocor_str
+  , autocor = autocor_str
 ) 
 
 prior1 <- c(
