--- a/00ExperimentalNOAR.Rmd
+++ b/00ExperimentalNOAR.Rmd
@@ -1249,7 +1249,6 @@ all_models <- report_side_by_side(
   pa_sub,
   pa_obj_log,
   mood_gauss,
-  mood_skew,
   reactance_ordinal,
   is_reactance,
   
@@ -1267,7 +1266,6 @@ summary_all_models <- all_models %>%
     c(" ", "Subjective MVPA Hurdle Poisson" = 2, 
       "Device-Based MVPA Log (Gaussian)" = 2, 
       "Mood Gaussian" = 2,
-      "Mood Skewnormal" = 2,
       "Reactance Ordinal" = 2,
       "Reactance Dichotome" = 2)
   )
@@ -1275,10 +1273,10 @@ summary_all_models <- all_models %>%
 export_xlsx(
   summary_all_models, 
   rows_to_pack = rows_to_pack_final,
-  file.path("Output", "AllModels_experimental_NOAR.xlsx"), 
+  file.path("Output", "AllModels_experimental_noAR.xlsx"), 
   merge_option = 'both', 
   simplify_2nd_row = TRUE,
-  colwidths = c(38, 7.2, 13.3, 7.2, 13.3, 7.2, 13.3,7.2, 13.3,7.2, 13.3,7.2, 13.3),
+  colwidths = c(38, 7.2, 13.3, 7.2, 13.3,7.2, 13.3,7.2, 13.3,7.2, 13.3),
   line_above_rows = c(1,2),
   line_below_rows = c(-1)
 )
