--- a/00ExperimentalNOAR.Rmd
+++ b/00ExperimentalNOAR.Rmd
@@ -575,7 +575,7 @@ pa_sub <- my_brm(
 ```{r check_pa_sub_poisson}
 
 check_brms(pa_sub, log_pp_check = TRUE)
-DHARMa.check_brms.all(pa_sub, integer = TRUE)
+DHARMa.check_brms.all(pa_sub, integer = TRUE, outliers_type = 'bootstrap')
 
 ```
 
@@ -676,7 +676,7 @@ pa_sub_zero_model <- my_brm(
 ```{r check_pa_sub_separate_inactive}
 
 check_brms(pa_sub_zero_model, log_pp_check = FALSE)
-DHARMa.check_brms.all(pa_sub_zero_model, integer = TRUE)
+DHARMa.check_brms.all(pa_sub_zero_model, integer = TRUE, outliers_type = 'bootstrap')
 
 ```
 
@@ -767,7 +767,7 @@ pa_sub_active_model <- my_brm(
 ```{r check_pa_sub_separate_active}
 
 check_brms(pa_sub_active_model, log_pp_check = TRUE)
-DHARMa.check_brms.all(pa_sub_active_model, integer = TRUE)
+DHARMa.check_brms.all(pa_sub_active_model, integer = TRUE, outliers_type = 'bootstrap')
 
 ```
 
@@ -874,7 +874,7 @@ pa_obj_log <- my_brm(
 ```{r check_pa_obj_log_g}
 
 check_brms(pa_obj_log, log_pp_check = TRUE)
-DHARMa.check_brms.all(pa_obj_log, integer = TRUE)
+DHARMa.check_brms.all(pa_obj_log, integer = TRUE, outliers_type = 'bootstrap')
 
 ```
 
