--- a/00ExperimentalAr.Rmd
+++ b/00ExperimentalAr.Rmd
@@ -1053,7 +1053,12 @@ formula <- bf(
 
 prior1 <- c(
   brms::set_prior("normal(0, 2.5)", class = "b")
-  #, brms::set_prior("normal(0, 10)", class = "Intercept", lb=0, ub=5) # range of the outcome scale
+  #, brms::set_prior("normal(2, 1)", class = "Intercept", lb=0, ub=5)
+  , brms::set_prior("normal(2.5, 1)", class = "Intercept", coef = '1') # range of the
+  , brms::set_prior("normal(3.5, 2)", class = "Intercept", coef = '2') # range of
+  , brms::set_prior("normal(5, 2)", class = "Intercept", coef = '3') # range oftheoutcome
+  , brms::set_prior("normal(8, 3)", class = "Intercept", coef = '4') # range
+  , brms::set_prior("normal(12, 4)", class = "Intercept", coef = '5') # rangeoftheoutcomescale
   
   , brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0)
   
@@ -1110,7 +1115,7 @@ summarize_brms(
   model_rows_random = model_rows_random_ordinal,
   model_rownames_fixed = model_rownames_fixed_ordinal,
   model_rownames_random = model_rownames_random_ordinal,
-  exponentiate = T,
+  exponentiate = F,
   include_p_direction = T) %>%
   print_df(rows_to_pack = rows_to_pack_ordinal)
 
